<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mixture</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">search</string>
    <string name="action_delete">delete</string>
    <string name="action_help">help</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_share">share</string>
    <string name="action_overflow">overflow</string>
    <string name="action_attach">attach</string>
    <string name="action_copy">copy</string>
    <string name="action_done">done</string>
    <string name="action_mail_add">addMail</string>
    <string name="action_star">star</string>
    <string name="action_video">video</string>
    <string name="artist">ARTISTS</string>
    <string name="album">ALBUM</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
</resources>
